# log_analyzer

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  config.conf  config.json  main.py  pyproject.toml  report.html
.github/workflows/: ci.yml
data/: report.html
log_analyzer/: get_statistic.py  read_file.py
src/log_analyzer/: analyzer.py  file_manager.py  get_statistic.py  read_file.py  settings.py
src/tests/: test_analyzer.py  test_file_manager.py
