[project]
name = "log-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-log-parser>=1.7.0",
    "js-jquery-tablesorter>=2.0.5",
    "pip>=25.2",
    "pre-commit>=4.3.0",
    "pyparsing>=3.2.5",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "ruff>=0.14.0",
    "structlog>=25.4.0",
]

[tool.ruff]

exclude = [
    "__init__.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "gunicorn.conf.py",
    "gunicorn.conf.example.py"
]
extend-exclude = ["tests", ".eggs", "releasenotes"]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]
ignore = ["B008", "UP007", "B905"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
